test/examples/graphs/index.js
// TODO
// example graphs must be a show case, not to be ised for tests
// infact they are not didactic, port them in this folder
// and put in example graphs, something that the user can see.
// Here there are graphs as functions with data result for tests.
//

// exports['apply'] = require('./apply.json')
// exports.createParagraph = require('./createParagraph.json')
// exports.dateParse = require('./dateParse.json')

// exports['hello-world'] = require('./hello-world.json')
exports.indexOf = require('./indexOf.json')

// exports.or = require('./or.json')
// exports.sum = require('./sum.json')
// exports.welcome = require('./welcome.json')

// TODO
// it works but I get an error when comparing results
// AssertionError: expected 2016-02-01 00:00:00.000 -0500 deepEqual '2016-02-01 00:00:00.000 -0500'
// exports['new'] = require('./new.json')

// TODO fix it! exports.dotOperator = require('./dotOperator.json')
